--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon backend/server.js",
-    "build":"npm install --legacy-peer-deps && npm install --legacy-peer-deps --prefix backend && npm run build --prefix backend"
+    "build":"npm install --legacy-peer-deps && npm install --legacy-peer-deps --prefix backend && npm run build"
   },
   "author": "Aditya Gupta",
   "license": "ISC",
